# arc

./: .gitignore  README.md  main.py  pyproject.toml
config/: data.yaml
data/original/processed/: evaluation_outputs.json  evaluation_tasks.json  training_outputs.json  training_tasks.json
src/: dsl_documentation.ipynb  test_solutions.ipynb
src/dsl/: dsl.py
src/utils/: arc_loader.py
