[project]
name = "arc"
version = "0.1.0"
description = "arc solution attempt with an ensemble of ps and ttft"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "mypy>=1.18.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pytest>=8.4.2",
    "tqdm>=4.67.1",
    "unsloth>=2025.9.6",
]
